--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </tr>
   </table>
   <hr>
-  <button type="button" name="button"><a href="file:///E:/T.Ata/Benjamin%20Yr.10%201/personal%20website/contacts.html">You can talk here</a> </button>
+  <button type="button" name="button"><a href="contacts.html">You can talk here</a> </button>
 
 
 
